--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -114,7 +114,7 @@
 .login-container {
   display: flex;
   min-height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: var(--bg-main);
 }
 
