--- a/src/pages/UjianSumatif.css
+++ b/src/pages/UjianSumatif.css
@@ -312,8 +312,8 @@
 
 .exam-modal-content.question-manager,
 .exam-modal-content.exam-fullscreen {
-  max-width: 100vw;
-  width: 100vw;
+  max-width: 100%;
+  width: 100%;
   height: 100vh;
   max-height: 100vh;
   border-radius: 0;
@@ -746,7 +746,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 2500;
   background-color: #f8fafc;
